feat: favorite a word
